fixed test alignment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -364,6 +364,7 @@ nav h1 a {
   padding: 10px 20px 16px;
   position: relative;
   border-radius: 4px;
+  text-align: justify;
 }
 #reviews-list li p {
   margin: 0 0 10px;
